--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "factsheet",
+  "name": "docdesigner",
   "version": "0.0.1",
   "description": "Let's auto-design factsheets",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:components": "phantomjs src/ComponentScraper/ComponentScraper.js"
   },
   "author": "Byron Houwens",
   "license": "MIT",
@@ -12,9 +12,15 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
+    "body-parser": "^1.15.2",
+    "casperjs": "^1.1.1",
+    "express": "^4.14.0",
+    "node-fetch": "^1.5.3",
     "phantomjs": "^1.9.18",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-node-externals": "^1.2.0"
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.9.0",
