--- a/package.json
+++ b/package.json
@@ -4,23 +4,29 @@
   "description": "Let's auto-design factsheets",
   "main": "index.js",
   "scripts": {
-    "build:components": "phantomjs src/ComponentScraper/ComponentScraper.js"
+    "build:components": "phantomjs src/ComponentScraper/ComponentScraper.js",
+    "build": "webpack -p",
+    "start": "node dist/app.js"
   },
   "author": "Byron Houwens",
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-3": "^6.11.0",
     "body-parser": "^1.15.2",
     "casperjs": "^1.1.1",
     "express": "^4.14.0",
     "node-fetch": "^1.5.3",
+    "node-phantom": "^0.2.5",
     "phantomjs": "^1.9.18",
     "webpack": "^1.13.1",
-    "webpack-node-externals": "^1.2.0"
+    "webpack-node-externals": "^1.2.0",
+    "webpage": "^0.3.0"
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.9.0",
